bindings/c/include/sqlite3.h

#define SQLITE_OK 0
#define SQLITE_ERROR 1
typedef struct sqlite3 sqlite3;
typedef struct sqlite3_stmt sqlite3_stmt;
int sqlite3_initialize(void);
int sqlite3_shutdown(void);
int sqlite3_open(const char *filename, sqlite3 **db_out);
int sqlite3_open_v2(const char *filename, sqlite3 **db_out, int _flags, const char *_z_vfs);
int sqlite3_trace_v2(sqlite3 *_db,
                     unsigned int _mask,
                     void (*_callback)(unsigned int, void*, void*, void*),
                     void *_context);
void sqlite3_progress_handler(sqlite3 *_db, int _n, int (*_callback)(void *), void *_context);
int sqlite3_set_authorizer(sqlite3 *db,
                           int (*xAuth)(void*, int, const char*, const char*, const char*, const char*),
                           void *pUserData);
int sqlite3_prepare_v2(sqlite3 *db, const char *sql, int _len, sqlite3_stmt **out_stmt, const char **_tail);
int sqlite3_prepare_v3(sqlite3 *db, const char *sql, int _len, unsigned int _prep_flags, sqlite3_stmt **out_stmt, const char **_tail);
int sqlite3_step(sqlite3_stmt *stmt);
int sqlite3_reset(sqlite3_stmt *stmt);
int sqlite3_stmt_readonly(sqlite3_stmt *_stmt);
int sqlite3_stmt_busy(sqlite3_stmt *_stmt);
int sqlite3_stmt_status(sqlite3_stmt *stmt, int op, int resetFlg);
sqlite3_stmt *sqlite3_next_stmt(sqlite3 *db, sqlite3_stmt *stmt);
int sqlite3_serialize(sqlite3 *_db, const char *_schema, void **_out, int *_out_bytes, unsigned int _flags);
int sqlite3_get_autocommit(sqlite3 *_db);
int sqlite3_total_changes(sqlite3 *_db);
int64_t sqlite3_last_insert_rowid(sqlite3 *_db);
void sqlite3_interrupt(sqlite3 *_db);
void sqlite3_sleep(int _ms);
int sqlite3_limit(sqlite3 *_db, int _id, int _new_value);
void *sqlite3_malloc64(int _n);
void sqlite3_free(void *_ptr);
char *sqlite3_mprintf(const char *fmt, ...);
char *sqlite3_snprintf(int n, char *buf, const char *fmt, ...);
void *sqlite3_user_data(void *_context);
const char *sqlite3_sql(sqlite3_stmt *stmt);
int sqlite3_value_type(void *value);
int64_t sqlite3_value_int64(void *value);
int sqlite3_value_int(void *value);
double sqlite3_value_double(void *value);
const unsigned char *sqlite3_value_text(void *value);
const void *sqlite3_value_blob(void *value);
int sqlite3_value_bytes(void *value);
void *sqlite3_value_dup(void *value);
void sqlite3_value_free(void *value);
int sqlite3_get_table(sqlite3 *db, const char *sql, char ***paz_result, int *pn_row, int *pn_column, char **pz_err_msg);
void sqlite3_free_table(char **az_result);
void sqlite3_result_null(void *_context);
void sqlite3_result_int64(void *_context, int64_t _val);
void sqlite3_result_int(void *_context, int _val);
void sqlite3_result_double(void *_context, double _val);
void sqlite3_result_text(void *_context, const char *_text, int _len, void *_destroy);
void sqlite3_result_blob(void *_context, const void *_blob, int _len, void *_destroy);
void sqlite3_result_error_nomem(void *_context);
void sqlite3_result_error_toobig(void *_context);
void sqlite3_result_error(void *_context, const char *_err, int _len);
int sqlite3_stricmp(const char *_a, const char *_b);
int sqlite3_create_collation_v2(sqlite3 *_db,
                                const char *_name,
                                int _enc,
                                void *_context,
                                int (*_cmp)(void),
                                void (*_destroy)(void));
int sqlite3_create_function_v2(sqlite3 *_db,
                               const char *_name,
                               int _n_args,
                               int _enc,
                               void *_context,
                               void (*_func)(void),
                               void (*_step)(void),
                               void (*_final_)(void),
                               void (*_destroy)(void));
int sqlite3_create_window_function(sqlite3 *_db,
                                   const char *_name,
                                   int _n_args,
                                   int _enc,
                                   void *_context,
                                   void (*_x_step)(void),
                                   void (*_x_final)(void),
                                   void (*_x_value)(void),
                                   void (*_x_inverse)(void),
                                   void (*_destroy)(void));
int sqlite3_threadsafe(void);
const char *sqlite3_libversion(void);
int sqlite3_libversion_number(void);
int sqlite3_wal_checkpoint(sqlite3 *_db, const char *_db_name);
/**
 * Return meta information about a specific column of a database table.
 * 
 * @param db Connection handle
 * @param zDbName Database name or NULL for main database
 * @param zTableName Table name
 * @param zColumnName Column name
 * @param pzDataType OUTPUT: Declared data type
 * @param pzCollSeq OUTPUT: Collation sequence name
 * @param pNotNull OUTPUT: True if NOT NULL constraint exists
 * @param pPrimaryKey OUTPUT: True if column part of PK
 * @param pAutoinc OUTPUT: True if column is auto-increment
 * @return SQLITE_OK on success, SQLITE_ERROR on error
 */
int sqlite3_table_column_metadata(
    sqlite3 *db,
    const char *zDbName,
    const char *zTableName,
    const char *zColumnName,
    char const **pzDataType,
    char const **pzCollSeq,
    int *pNotNull,
    int *pPrimaryKey,
    int *pAutoinc
);