bindings/dart/lib/src/bindings.g.dart


@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sqlite3_free(
  ffi.Pointer<ffi.Void> _ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external void sqlite3_free_table(
  ffi.Pointer<ffi.Pointer<ffi.Char>> az_result,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_get_autocommit(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external int sqlite3_get_table(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> sql,
  ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Char>>> paz_result,
  ffi.Pointer<ffi.Int> pn_row,
  ffi.Pointer<ffi.Int> pn_column,
  ffi.Pointer<ffi.Pointer<ffi.Char>> pz_err_msg,
);

@ffi.Native<ffi.Int Function()>()
external int sqlite3_initialize();

@ffi.Native<ffi.Void Function(ffi.Pointer<sqlite3>)>()
external void sqlite3_interrupt(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_last_insert_rowid(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> sqlite3_libversion();

@ffi.Native<ffi.Int Function()>()
external int sqlite3_libversion_number();

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Int, ffi.Int)>()
external int sqlite3_limit(
  ffi.Pointer<sqlite3> _db,
  int _id,
  int _new_value,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Int)>()
external ffi.Pointer<ffi.Void> sqlite3_malloc64(
  int _n,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> sqlite3_mprintf(
  ffi.Pointer<ffi.Char> fmt,
);

@ffi.Native<
    ffi.Pointer<sqlite3_stmt> Function(
        ffi.Pointer<sqlite3>, ffi.Pointer<sqlite3_stmt>)>()
external ffi.Pointer<sqlite3_stmt> sqlite3_next_stmt(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<sqlite3>>)>()
external int sqlite3_open(
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<ffi.Pointer<sqlite3>> db_out,
);

@ffi.Native<
    ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<sqlite3>>,
        ffi.Int, ffi.Pointer<ffi.Char>)>()
external int sqlite3_open_v2(
  ffi.Pointer<ffi.Char> filename,
  ffi.Pointer<ffi.Pointer<sqlite3>> db_out,
  int _flags,
  ffi.Pointer<ffi.Char> _z_vfs,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Pointer<sqlite3_stmt>>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external int sqlite3_prepare_v2(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> sql,
  int _len,
  ffi.Pointer<ffi.Pointer<sqlite3_stmt>> out_stmt,
  ffi.Pointer<ffi.Pointer<ffi.Char>> _tail,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.UnsignedInt,
        ffi.Pointer<ffi.Pointer<sqlite3_stmt>>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external int sqlite3_prepare_v3(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> sql,
  int _len,
  int _prep_flags,
  ffi.Pointer<ffi.Pointer<sqlite3_stmt>> out_stmt,
  ffi.Pointer<ffi.Pointer<ffi.Char>> _tail,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<sqlite3>,
        ffi.Int,
        ffi.Pointer<
            ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>,
        ffi.Pointer<ffi.Void>)>()
external void sqlite3_progress_handler(
  ffi.Pointer<sqlite3> _db,
  int _n,
  ffi.Pointer<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>
      _callback,
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_reset(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, ffi.Int,
        ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_blob(
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.Void> _blob,
  int _len,
  ffi.Pointer<ffi.Void> _destroy,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double)>()
external void sqlite3_result_double(
  ffi.Pointer<ffi.Void> _context,
  double _val,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Int)>()
external void sqlite3_result_error(
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.Char> _err,
  int _len,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_error_nomem(
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_error_toobig(
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external void sqlite3_result_int(
  ffi.Pointer<ffi.Void> _context,
  int _val,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>()
external void sqlite3_result_int64(
  ffi.Pointer<ffi.Void> _context,
  int _val,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_null(
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, ffi.Int,
        ffi.Pointer<ffi.Void>)>()
external void sqlite3_result_text(
  ffi.Pointer<ffi.Void> _context,
  ffi.Pointer<ffi.Char> _text,
  int _len,
  ffi.Pointer<ffi.Void> _destroy,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Pointer<ffi.Void>>,
        ffi.Pointer<ffi.Int>,
        ffi.UnsignedInt)>()
external int sqlite3_serialize(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _schema,
  ffi.Pointer<ffi.Pointer<ffi.Void>> _out,
  ffi.Pointer<ffi.Int> _out_bytes,
  int _flags,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(
                    ffi.Pointer<ffi.Void>,
                    ffi.Int,
                    ffi.Pointer<ffi.Char>,
                    ffi.Pointer<ffi.Char>,
                    ffi.Pointer<ffi.Char>,
                    ffi.Pointer<ffi.Char>)>>,
        ffi.Pointer<ffi.Void>)>()
external int sqlite3_set_authorizer(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<ffi.Void>,
                  ffi.Int,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>)>>
      xAuth,
  ffi.Pointer<ffi.Void> pUserData,
);

@ffi.Native<ffi.Int Function()>()
external int sqlite3_shutdown();

@ffi.Native<ffi.Void Function(ffi.Int)>()
external void sqlite3_sleep(
  int _ms,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<ffi.Char> sqlite3_snprintf(
  int n,
  ffi.Pointer<ffi.Char> buf,
  ffi.Pointer<ffi.Char> fmt,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<sqlite3_stmt>)>()
external ffi.Pointer<ffi.Char> sqlite3_sql(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_step(
  ffi.Pointer<sqlite3_stmt> stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_stmt_busy(
  ffi.Pointer<sqlite3_stmt> _stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>)>()
external int sqlite3_stmt_readonly(
  ffi.Pointer<sqlite3_stmt> _stmt,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3_stmt>, ffi.Int, ffi.Int)>()
external int sqlite3_stmt_status(
  ffi.Pointer<sqlite3_stmt> stmt,
  int op,
  int resetFlg,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>()
external int sqlite3_stricmp(
  ffi.Pointer<ffi.Char> _a,
  ffi.Pointer<ffi.Char> _b,
);

/// Return meta information about a specific column of a database table.
///
/// @param db Connection handle
/// @param zDbName Database name or NULL for main database
/// @param zTableName Table name
/// @param zColumnName Column name
/// @param pzDataType OUTPUT: Declared data type
/// @param pzCollSeq OUTPUT: Collation sequence name
/// @param pNotNull OUTPUT: True if NOT NULL constraint exists
/// @param pPrimaryKey OUTPUT: True if column part of PK
/// @param pAutoinc OUTPUT: True if column is auto-increment
/// @return SQLITE_OK on success, SQLITE_ERROR on error
@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>,
        ffi.Pointer<ffi.Pointer<ffi.Char>>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<ffi.Int>)>()
external int sqlite3_table_column_metadata(
  ffi.Pointer<sqlite3> db,
  ffi.Pointer<ffi.Char> zDbName,
  ffi.Pointer<ffi.Char> zTableName,
  ffi.Pointer<ffi.Char> zColumnName,
  ffi.Pointer<ffi.Pointer<ffi.Char>> pzDataType,
  ffi.Pointer<ffi.Pointer<ffi.Char>> pzCollSeq,
  ffi.Pointer<ffi.Int> pNotNull,
  ffi.Pointer<ffi.Int> pPrimaryKey,
  ffi.Pointer<ffi.Int> pAutoinc,
);

@ffi.Native<ffi.Int Function()>()
external int sqlite3_threadsafe();

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>)>()
external int sqlite3_total_changes(
  ffi.Pointer<sqlite3> _db,
);

@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<sqlite3>,
        ffi.UnsignedInt,
        ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.UnsignedInt, ffi.Pointer<ffi.Void>,
                    ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>,
        ffi.Pointer<ffi.Void>)>()
external int sqlite3_trace_v2(
  ffi.Pointer<sqlite3> _db,
  int _mask,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.UnsignedInt, ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>
      _callback,
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Void> sqlite3_user_data(
  ffi.Pointer<ffi.Void> _context,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Void> sqlite3_value_blob(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_value_bytes(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Void>)>()
external double sqlite3_value_double(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Void> sqlite3_value_dup(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void sqlite3_value_free(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_value_int(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_value_int64(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.UnsignedChar> sqlite3_value_text(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>()
external int sqlite3_value_type(
  ffi.Pointer<ffi.Void> value,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<sqlite3>, ffi.Pointer<ffi.Char>)>()
external int sqlite3_wal_checkpoint(
  ffi.Pointer<sqlite3> _db,
  ffi.Pointer<ffi.Char> _db_name,
);
